--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "multer": "^1.4.5-lts.1",
     "openai": "^4.80.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
