--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@netlify/functions": "^3.0.0",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
