--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  functions = "functions"  
-  command = "npm install"  
-  publish = "public"       
+  functions = "netlify/functions"  
+  command = "npm run build"  
+  publish = "dist"
