--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,12 +5,11 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
+    "module": "node16",
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "moduleResolution": "node16",
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
