--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,13 +3,12 @@
     "incremental": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2022",
-    "lib": ["ES2023"],
-    "module": "ESNext",
+    "lib": ["ES2022"],
+    "module": "node16",
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "moduleResolution": "node16",
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
