--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2022",
-    "lib": ["ES2022"],
+    "lib": ["ES2022","DOM"],
     "module": "nodenext"
   },
   "include": ["vite.config.ts", "server/**/*.ts", "backend/**/*.ts"]
