--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,9 @@
   functions = "netlify/functions"  
   command = "npm run build"  
   publish = "dist"
+[[headers]]
+  for = "/.netlify/functions/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "http://localhost:8888"
+    Access-Control-Allow-Headers = "Content-Type"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE"
