--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,5 +7,5 @@
     "module": "nodenext",
     "jsx": "react-jsx"
   },
-  "include": ["src", "src/netlify/functions/tts.mts"]
+  "include": ["src", "src/netlify/functions/tts.mts", "constants.tsx"]
 }
