--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "elevenlabs": "^1.51.0",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.80.1",
